--- a/project2/package.json
+++ b/project2/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "vue-cli-service build",
+    "deploy": "gh-pages -d dist",
+    "clean": "gh-pages-clean"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.0",
@@ -30,7 +33,8 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^7.20.0"
+    "eslint-plugin-vue": "^7.20.0",
+    "gh-pages": "^6.2.0"
   },
   "eslintConfig": {
     "root": true,
