--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 on:
-  # 1. master 브랜치로 push될 경우
+  # 1. main 브랜치로 push될 경우
   push:
-    branches: [ master ]
+    branches: [ main ]
   # 2. master 브랜치로 PR가 발생할 경우
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   deploy:
