--- a/project2/package.json
+++ b/project2/package.json
@@ -16,9 +16,13 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "swiper": "^11.1.15",
     "vue": "^3.2.13",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^4.0.3",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue3-carousel": "^0.8.0",
+    "vueperslides": "^3.5.1",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
