--- a/project2/package.json
+++ b/project2/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.0.3",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-carousel": "^0.8.0",
+    "vue3-toastify": "^0.2.4",
     "vueperslides": "^3.5.1",
     "vuex": "^4.0.0"
   },
