--- a/project2/package.json
+++ b/project2/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "dotenv": "^16.4.7",
     "swiper": "^11.1.15",
     "vue": "^3.2.13",
     "vue-carousel": "^0.18.0",
