--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,10 @@ jobs:
       - name: Create .env.prod file
         working-directory: ./project2
         run: echo "${{ secrets.ENV_PROD }}" > .env.prod
+      #디버깅
+      - name: Check .env.prod content
+        working-directory: ./project2
+        run: cat .env.prod
 
       # 4. 패키지 설치
       - name: Install dependencies
