--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       
       # 3. ENV_PROD 환경 변수로 .env.prod 파일 생성
       - name: Create .env.prod
-        run: echo "${{ secrets.ENV_PROD }}" > ./project2/.env.prod
+        run: echo "${{ secrets.VUE_APP_ENV_PROD }}" > ./project2/.env.prod
 
       # 4. 패키지 설치 
       - name: Install dependencies
@@ -31,7 +31,7 @@ jobs:
       # 5. 빌드 실행
       - name: Build Page
         working-directory: ./project2
-        run: npm run build
+        run: npm run build:prod
         env:
           NODE_ENV: production
       
